prevent README images to overflow

--- a/assets/style.css
+++ b/assets/style.css
@@ -137,6 +137,10 @@ pre {
   font-size: 3em;
 }
 
+.block-list img {
+    max-width: 100%;
+}
+
 .markdown-block h1 {
   margin-top: 2em;
   margin-bottom: 0.5px
@@ -163,7 +167,7 @@ pre {
 }
 
 .docs-comment img {
-  max-width: 500px;
+  max-width: 100%;
 }
 
 
